--- a/bookkanri/templates/bookkanri/bookNew.html
+++ b/bookkanri/templates/bookkanri/bookNew.html
@@ -1,26 +1,10 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>本情報登録</title>
-	</head>
-	<body>
-		<h1>新規登録フォーム</h1>
-		<form action="{% url 'bookNewSave' %}" method="POST">
+{% extends 'bookkanri/book_base.html' %}
+	{% block content %}
+		<h2>新規登録フォーム</h2>
+		<form class="newbook-post" method="POST">
 			{% csrf_token %}
-			<table>{{form1.as_table}}
-			
-				<tr><td>
-					<input type="submit" value="新規登録">
-							
-				</td></tr>
-						
-				
-					</table>
+			{{form1.as_p}}
+			<button type="submit" class="save btn">登録</button>
+			<a href="{%url 'index' %}">戻る</a>
 		</form>
-					<form action="{% url 'index' %}" method="GET">
-								
-							<input type="submit" value="戻る">
-						</form>
-
-	</body>
-</html>
+{% endblock %}
