--- a/bookkanri/templates/bookkanri/bookUpdate.html
+++ b/bookkanri/templates/bookkanri/bookUpdate.html
@@ -1,24 +1,11 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>本情報変更</title>
-	</head>
-	<body>
-		<h1>{{ updateMSG }}</h1>
-		
-		<form action=""  method="POST">
+{% extends 'bookkanri/book_base.html' %}
+	{% block content %}
+		<h2>{{ updateMSG }}</h2>
+		<form class="updbook-post" method="POST">
 			{% csrf_token %}
 			
-			<table>{{form1.as_table}}
-					<input type="submit" value="更新">
-								
-				
-			</table>
+			{{form1.as_p}}
+			<button type="submit" class="save btn">{{ updateMSG }}</button>
+			<a href="{%url 'index' %}">戻る</a>
 		</form>
-					<form action="{% url 'index' %}" method="GET">
-								
-							<input type="submit" value="戻る">
-						</form>
-
-	</body>
-</html>
+{% endblock %}
